# stepgen_new

./: .gitignore  Cargo.toml
.cargo/: config.toml
src/: lib.rs  utils.rs  x32.rs  x64.rs
src/utils/: enums.rs  sigmoid.rs  sin.rs
