[package]
authors = ["Giacomo Gropplero <giacomo@gropplero.com>"]
categories = ["embedded", "no-std"]
description = "Stepper motor speed ramp generator with time constraint"
repository = "https://github.com/Ultrajackstr/stepgen_new"
name = "stepgen_new"
version = "0.3.1"
license = "MIT/Apache-2.0"
readme = "README.md"
exclude = [
    "docs/*"
]
edition = "2021"

[dependencies]
#fixed = "1.23.1"
#fixed-sqrt = "0.2.5"
#fixed-macro = "1.2.0"
fixed = "2.0.0-alpha.12"
fixed-macro = {git = "https://github.com/Ultrajackstr/fixed-macro.git", branch = "master"}
fixed-sqrt = {git = "https://github.com/Ultrajackstr/fixed-sqrt-rs.git", branch = "master"}

fugit = "0.3.7"

[profile.release]
opt-level = 3
lto = true

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2
