[package]
authors = ["Giacomo Gropplero <giacomo@gropplero.com>"]
categories = ["embedded", "no-std"]
description = "Stepper motor speed ramp generator with time constraint"
repository = "https://github.com/Ultrajackstr/stepgen_new"
name = "stepgen_new"
version = "0.3.2"
license = "MIT/Apache-2.0"
readme = "README.md"
exclude = [
    "docs/*"
]
edition = "2021"

[dependencies]
fixed = "2.0.0-alpha.26.0"
fixed-macro = {git = "https://github.com/Ultrajackstr/fixed-macro.git", branch = "master"}
fixed-sqrt = {git = "https://github.com/Ultrajackstr/fixed-sqrt-rs.git", branch = "master"}
fugit = "0.3"
micromath = "2.1.0"

[profile.release]
opt-level = 3
lto = "fat"

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2
