[package]
authors = ["Giacomo Gropplero <giacomo@gropplero.com>"]
categories = ["embedded", "no-std"]
description = "Stepper motor speed ramp generator with time constraint"
repository = "https://github.com/Ultrajackstr/stepgen_new"
name = "stepgen_new"
version = "0.3.2"
license = "MIT/Apache-2.0"
readme = "README.md"
exclude = [
    "docs/*"
]
edition = "2021"

[dependencies]
fixed = "1.28"
fixed-sqrt = "0.2.5"
fixed-macro = "1.2.0"
# fixed = "2.0.0-alpha.26.0"
# # fixed-macro = {git = "https://github.com/Ultrajackstr/fixed-macro.git", branch = "master"}
# fixed-macro = {git = "https://github.com/Ultrajackstr/fixed-macro.git", rev = "a8dba9a"}
# fixed-sqrt = {git = "https://github.com/Ultrajackstr/fixed-sqrt-rs.git", rev = "1fb41bd"}
fugit = "0"